--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
             <version>2.14.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.5.3</version>
+        </dependency>
     </dependencies>
 
     <properties>
